'hr' was previously not showing... fixed issue in stylesheet

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ header.masthead {
 }
 
 
-hr {
+section hr {
   max-width: 50px;
   border-width: 3px;
   border-color: orange;
@@ -45,7 +45,6 @@ section {
 }
 
 section .container{
-	/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 	font-family: 'Do Hyeon', sans-serif; 
 }
 
